--- a/src/components/menu.css
+++ b/src/components/menu.css
@@ -5,6 +5,7 @@
 }
 
 .menu {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     gap: 0px;
